--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Markdown Syntax'
+title: 'Create App'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
